--- a/css/extend-home.css
+++ b/css/extend-home.css
@@ -13,35 +13,67 @@ a.project-link:hover {
 }
 
 .project-card {
+    /* Need to fix horzontal alignment for grid system */
+    float: none;
+    margin: 0 auto 25px auto;
+}
+
+.project-card-front:hover,
+.project-card-back:hover {
+    box-shadow: 1px 1px 15px #bbb;
+}
+
+.project-card h3 {
+    margin: 10px;
+}
+.project-card p.text-muted {
+    /*padding: 0px;*/
+    margin-top: 15px;
+    margin-bottom: 10px;
+    min-height: 4em;
+}
+
+.project-card-front,
+.project-card-back {
     border-color: #aaa;
     border-style: solid;
     border-width: 1px;
     border-radius: 10px;
     padding: 10px;
-    min-height: 300px;
+    width: 230px;
+    height: 340px;
     background-image: url('/img/card-bgtexture.png');
     background-attachment: scroll;
-    /* Set static size for cards */
-    width: 230px;
     /* Need to fix horzontal alignment for grid system */
     float: none;
-    margin-top: 0px;
-    margin-bottom: 25px;
-    margin-right: auto;
-    margin-left: auto;
-    /*margin: 0 auto;*/
+    margin: 0 auto 25px auto;
+
+    perspective: 600px;
+
+    backface-visibility: hidden;
+    transform-style: preserve3d;
+    transition: all 0.4s;
 }
 
-.project-card:hover {
-    box-shadow: 1px 1px 15px #bbb;
+.project-card-back {
+    transform: rotateY(-180deg);
+    position: absolute;
+    top: 0px;
+    left: 15px;
+    padding: 10px;
 }
 
-.project-card p.text-muted {
-    /*padding: 0px;*/
-    margin-top: 15px;
-    margin-bottom: 10px;
+.flipped .project-card-back {
+    transform: rotateY(0deg);
+    /* Need to fix horzontal alignment for grid system */
+    float: none;
+    margin: 0 auto 25px auto;
+
 }
 
+.flipped .project-card-front {
+    transform: rotateY(180deg);
+}
 
 .seperator {
     margin-top: 15px;
